# pywis-topics

./: README.md  pyproject.toml  setup.py
.github/workflows/: debian.yml  flake8.yml  main.yml
debian/: changelog  control  copyright
pywis_topics/: __init__.py  bundle.py  pygeoapi_plugin.py  topics.py  util.py
tests/: run_tests.py
