[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywis-topics"
version = "0.5.dev0"
description = "pywis-topics is a utility to work with the WIS2 Topic Hierarchy"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["WIS2", "WTH", "topics"]
authors = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
]
maintainers = [
    {name = "Tom Kralidis", email = "tomkralidis@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]
dependencies = [
    "click"
]

[project.optional-dependencies]
dev = ["flake8"]
release = ["build", "twine", "wheel"]

[project.scripts]
pywis-topics = "pywis_topics:cli"

[project.urls]
homepage = "https://github.com/World-Meteorological-Organization/pywis-topics"
source = "https://github.com/World-Meteorological-Organization/pywis-topics"
documentation = "https://github.com/World-Meteorological-Organization/pywis-topics"
issues = "https://github.com/World-Meteorological-Organization/pywis-topics/issues"
